--- a/Web_Client/src/app/feature/user-companies/user-companies.component.html
+++ b/Web_Client/src/app/feature/user-companies/user-companies.component.html
@@ -106,7 +106,7 @@
   </div>
   <!-- Hiển thị thông báo nếu công ty có người theo dõi -->
   <p class="warning-text">
-    Bạn chỉ có thể xóa công ty nếu không có ứng viên nào theo dõi công ty của bạn.
+    Bạn chỉ có thể xóa công ty nếu không có ứng viên nào theo dõi công ty hoặc yêu thích bài đăng của công ty đó.
   </p>
   <div class="pagination">
     <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
