--- a/Web_Client/src/app/components/favorite-apply-jobs/favorite-apply-jobs.component.html
+++ b/Web_Client/src/app/components/favorite-apply-jobs/favorite-apply-jobs.component.html
@@ -10,27 +10,23 @@
             class="search-input" />
     </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div *ngIf="paginatedJobs.length === 0" class="alert alert-info">
-                Không có công việc nào.
-            </div>
-
-            <div *ngFor="let job of paginatedJobs" class="post">
-                <strong>{{ job.recruitment.type }}</strong>
-                <div class="action-buttons">
-                    <span class="status-badge">Đã ứng tuyển</span>
-                </div>
-
-                <p class="job-title"><strong></strong> {{ job.recruitment.title }}</p>
-                <p class="job-description"><strong>Mô tả:</strong> {{ job.recruitment.description }}</p>
-                <p class="job-address"><strong>Địa chỉ:</strong> {{ job.recruitment.address }}</p>
-                <p class="job-experience"><strong>Kinh nghiệm:</strong> {{ job.recruitment.experience }} năm</p>
-                <p class="job-quantity"><strong>Số lượng tuyển:</strong> {{ job.recruitment.quantity }}</p>
-                <p class="job-salary"><strong>Lương tháng:</strong> {{ job.recruitment.salary }} triệu đồng</p>
-
-            </div>
+    <div *ngFor="let job of paginatedJobs" class="post">
+        <strong>{{ job.recruitment.type }}</strong>
+        <div class="action-buttons">
+            <ng-container [ngSwitch]="job.status">
+                <span *ngSwitchCase="0" class="status-badge status-processing">Đang xử lý</span>
+                <span *ngSwitchCase="1" class="status-badge status-rejected">Từ chối</span>
+                <span *ngSwitchCase="2" class="status-badge status-approved">Được duyệt</span>
+                <span *ngSwitchDefault class="status-badge status-unknown">Không rõ trạng thái</span>
+            </ng-container>
         </div>
+
+        <p class="job-title"><strong></strong> {{ job.recruitment.title }}</p>
+        <p class="job-description"><strong>Mô tả:</strong> {{ job.recruitment.description }}</p>
+        <p class="job-address"><strong>Địa chỉ:</strong> {{ job.recruitment.address }}</p>
+        <p class="job-experience"><strong>Kinh nghiệm:</strong> {{ job.recruitment.experience }} năm</p>
+        <p class="job-quantity"><strong>Số lượng tuyển:</strong> {{ job.recruitment.quantity }}</p>
+        <p class="job-salary"><strong>Lương tháng:</strong> {{ job.recruitment.salary }} triệu đồng</p>
     </div>
 
     <!-- Pagination -->
