--- a/Web_Client/src/app/components/favorite-apply-jobs/favorite-apply-jobs.component.css
+++ b/Web_Client/src/app/components/favorite-apply-jobs/favorite-apply-jobs.component.css
@@ -44,7 +44,6 @@
 }
 
 .action-buttons {
-    background: #dac71e;
     border: none;
     color: white;
     padding: 5px 15px;
@@ -144,3 +143,42 @@ strong {
     color: #555;
     margin: 5px 0;
 }
+
+.status-badge {
+    padding: 5px 10px;
+    border-radius: 12px;
+    font-size: 14px;
+    font-weight: 500;
+    display: inline-block;
+    min-width: 100px;
+    text-align: center;
+  }
+  
+  /* Đang xử lý */
+  .status-processing {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeeba;
+  }
+  
+  /* Từ chối */
+  .status-rejected {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+  }
+  
+  /* Được duyệt */
+  .status-approved {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+  }
+  
+  /* Không rõ trạng thái */
+  .status-unknown {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border: 1px solid #bee5eb;
+  }
+  
