--- a/Web_Client/src/app/feature/forgotpassword/forgotpassword.component.html
+++ b/Web_Client/src/app/feature/forgotpassword/forgotpassword.component.html
@@ -9,7 +9,9 @@
                     required />
             </div>
             <div class="button-group">
-                <button type="submit">Reset Password</button>
+                <button type="submit" [disabled]="isWorking">
+                    {{ isWorking ? 'Đang xử lý...' : 'Reset Password' }}
+                </button>
                 <a href="login" class="back-link">Back to Sign in</a>
             </div>
         </form>
