--- a/Web_Client/src/app/feature/user-companies/user-companies.component.html
+++ b/Web_Client/src/app/feature/user-companies/user-companies.component.html
@@ -126,10 +126,10 @@
     </div>
   </div>
   <!-- Hiển thị thông báo nếu công ty có người theo dõi -->
-  <p class="warning-text text-warning">
+  <!-- <p class="warning-text text-warning">
     <i class="fas fa-exclamation-triangle"></i>
     Bạn chỉ có thể xóa công ty nếu không có ứng viên nào theo dõi công ty của bạn.
-  </p>
+  </p> -->
 
   <div class="pagination">
     <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
