Add views for dashboard and testing for getTotalViews

--- a/Web_Client/src/app/feature/homepage/homepage.component.html
+++ b/Web_Client/src/app/feature/homepage/homepage.component.html
@@ -31,6 +31,11 @@
         <p class="label">Việc làm đang ứng</p>
         <p class="number">{{ totalRecruitments | number }}</p>
       </div>
+
+      <div class="dashboard-item">
+        <p class="label">Tổng lượt xem</p>
+        <p class="number">{{ totalViews | number }}</p>
+      </div>
     </div>
   </div>
 
