--- a/Web_Client/src/app/feature/homepage/homepage.component.html
+++ b/Web_Client/src/app/feature/homepage/homepage.component.html
@@ -33,9 +33,10 @@
       </div>
 
       <div class="dashboard-item">
-        <p class="label">Tổng lượt xem</p>
+        <p class="label">Tổng số lượt xem</p>
         <p class="number">{{ totalViews | number }}</p>
       </div>
+
     </div>
   </div>
 
