--- a/Web_Client/src/app/feature/homepage/homepage.component.html
+++ b/Web_Client/src/app/feature/homepage/homepage.component.html
@@ -32,7 +32,10 @@
         <p class="number">{{ totalRecruitments | number }}</p>
       </div>
 
-
+      <div class="dashboard-item">
+        <p class="label">Tổng lượt xem</p>
+        <p class="number">{{ totalViews | number }}</p>
+      </div>
     </div>
   </div>
 
